<resources>
    <string name="app_name">DrinkShopClient</string>
    <!--BottomNavigationView start-->
    <string name="textNews">最新消息</string>
    <string name="textProduct">商品頁面</string>
    <string name="textMember">會員中心</string>
    <string name="textMap">地圖</string>
    <string name="textSettings">設定</string>
    <string name="textOrderOnline">即時訂購</string>
    <string name="textShoppingCart">購物車</string>
    <!--BottomNavigationView end-->
    <!--會員中心 start-->
    <string name="textMemberHint">請輸入帳號</string>
    <string name="textPasswordHint">請輸入密碼</string>
    <string name="textConfirmPasswordHint">請再次輸入確認密碼</string>
    <string name="textRegisterBirthday">請輸入生日</string>
    <string name="textMemberLogin">會員登入</string>
    <string name="textMemberRegister">會員註冊</string>
    <string name="textMemberCoupon">優惠卷管理</string>
    <string name="textMemberHistory">歷史購買紀錄</string>
    <string name="textMemberFunctionMenu">會員功能</string>
    <string name="textSubmit">確認送出</string>
    <string name="textModifySubmit">確認修改</string>
    <string name="textFastLogin">快速登入</string>
    <string name="textMale">男</string>
    <string name="textFemale">女</string>
    <string name="textRegisterPhoneHint">請輸入手機號碼</string>
    <string name="textRegisterEmailHint">請輸入e-mail</string>
    <string name="textRegisterAddressHint">請輸入住址(外送住址)</string>
    <string name="textMemberMenuModify">會員資料修改</string>
    <string name="textMemberMenuHistory">歷史購買紀錄</string>
    <string name="textMemberMenuOrderStatus">查詢訂單狀況</string>
    <string name="textMemberMenuCoupon">優惠卷管理</string>
    <string name="textLoginSuccess">登入成功</string>
    <string name="textLogout">登出</string>
    <string name="textNotLogin">未登入</string>
    <string name="textMemberNameHint">請輸入姓名</string>
    <string name="msg_UpdateSuccess">修改成功</string>
    <string name="msg_UpdateFail">修改失敗</string>
    <string name="msg_InsertSuccess">新增成功</string>
    <string name="msg_InsertFail">新增失敗</string>
    <!--會員中心 end-->
    <!--facebook login start-->
    <string name="facebook_app_id">296322341094103</string>
    <string name="fb_login_protocol_scheme">fb296322341094103</string>
    <!--facebook login  end-->


    <!--error start-->
    <string name="textRegisterConfirmPasswordError">密碼輸入與第一次不相同,請重新輸入</string>
    <string name="textLoginError">登入失敗，請確認輸入的帳密是否正確</string>
    <string name="msg_InvalidUserOrPassword">登入失敗，請確認輸入的帳密是否正確</string>
    <string name="msg_NoNetwork">沒有可用的網絡連接</string>
    <string name="msg_NoProductsFound">No Products Found</string>
    <string name="msg_NoOrdersFound">沒有任何訂單記錄</string>
    <string name="text_AddingProductToShoppingCard">加入購物車</string>
    <string name="text_EditProductToShoppingCart">修改完成</string>
    <!--error end-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_facebook">FacebookActivity</string>
    <string name="msg_FailCreateOrder">無法建立訂單！</string>
    <string name="msg_NoFoundOrder">找不到訂單！</string>
    <string name="textPickUpTime">預計取貨時間：</string>
    <string name="textOfficiallanguage">感謝您的購買 歡迎下次再次光臨</string>
    <!--onKeyDown AlertDialogFragment Message start-->
    <string name="text_Exit">Exit App</string>
    <string name="msg_WantToExit">真的要離開嗎？</string>
    <string name="text_Yes">狠心離開</string>
    <string name="text_No">再逛逛好了</string>
    <string name="title_Delivery">外送員追蹤</string>
    <string name="delivery_title">您的訂單正在運送途中,請耐心等候</string>
    <string name="text_ShouldGrant">應授予訪問位置的權限</string>
    <string name="text_Connect">開始連線</string>
    <string name="text_Disconnect">結束連線</string>
    <string name="text_MessageEmpty">您沒有輸入訊息</string>
    <string name="text_LeftChatRoom">離開聊天室</string>
    <string name="text_NoCameraApp">手機無拍照app</string>
    <!--onKeyDown Message end-->

</resources>
