<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#e7e7e7">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="20dp"
            app:cardElevation="15dp">

            <ImageView
                android:id="@+id/img_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/default_head" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="9dp"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="未登入"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cvMemberModify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="24dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp">

                    <ImageView
                        android:id="@+id/ivMemberModify"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/member_menu_modify" />

                    <TextView
                        android:id="@+id/tvMemberModify"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="15dp"
                        android:layout_toRightOf="@id/ivMemberModify"
                        android:gravity="center_vertical"
                        android:text="@string/textMemberMenuModify"
                        android:textSize="25sp"
                        android:textStyle="bold|italic" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cvMemberHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="24dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp">

                    <ImageView
                        android:id="@+id/ivMemberHistory"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/member_menu_history" />

                    <TextView
                        android:id="@+id/btMemberHistory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="15dp"
                        android:layout_toRightOf="@id/ivMemberHistory"
                        android:gravity="center_vertical"
                        android:text="@string/textMemberMenuHistory"
                        android:textSize="25sp"
                        android:textStyle="bold|italic" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cvMemberOrderStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="24dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp">

                    <ImageView
                        android:id="@+id/ivMemberOrderStatus"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/member_menu_order_status" />

                    <TextView
                        android:id="@+id/tvMemberOrderStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="15dp"
                        android:layout_toRightOf="@id/ivMemberOrderStatus"
                        android:gravity="center_vertical"
                        android:text="@string/textMemberMenuOrderStatus"
                        android:textSize="25sp"
                        android:textStyle="bold|italic" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cvMemberCoupon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="24dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp">

                    <ImageView
                        android:id="@+id/ivMemberCoupon"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/member_menu_coupon" />

                    <TextView
                        android:id="@+id/tvMemberCoupon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="15dp"
                        android:layout_toRightOf="@id/ivMemberCoupon"
                        android:gravity="center_vertical"
                        android:text="@string/textMemberMenuCoupon"
                        android:textSize="25sp"
                        android:textStyle="bold|italic" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>